syntax = "proto2";
package webPageData;

option java_package = "ch.epfl.dedis.template.proto";
option java_outer_classname = "WebPageProto";

// WebPageContractData is created as a structure here, as go's map returns the
// elements in a random order and as such is not suitable for use in a
// system that needs to return always the same state.
message ContractWebPageData {
  required string URLWebPage = 1;
  required bytes HashedContent = 2;
  required string Content = 3;
  required string Selector = 4;
  required string CreationDate = 5;
  required bool TextOnly = 6;
}
